@@ -1,3 +1,7 @@
+2006-05-02  Don Allingham  <don@gramps-project.org>
+	* src/Config/_GrampsConfigKeys.py: add family-warn back in
+	* data/gramps.schemas.in: add family-warn back in
+	
 2006-05-02  Alex Roitman  <shura@gramps-project.org>
 	* src/RelLib/_BaseObject.py (PrivacyBase): Remove class, as it
 	already has its own module.
